--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,7 +1,7 @@
 version: '3.3'
 services:
   primary:
-    image: scprdev/streammachine:0.0.1
+    image: scprdev/streammachine:0.0.12
     entrypoint: ./docker-entrypoint.sh
     container_name: primary
     environment:
@@ -12,17 +12,21 @@ services:
     deploy:
       replicas: 1
     ports:
-    - 8022:8022
-    replica:
+    - 8020:8020
+    depends_on:
+      - redis
+  replica:
       container_name: replica
       entrypoint: ./docker-entrypoint.sh
-      image: scprdev/streammachine:0.0.1
+      image: scprdev/streammachine:0.0.12
       environment:
         - CONFIG_FILE=/streammachine/config/replica.json
       volumes:
         - ./config/dev/:/streammachine/config
       deploy:
         replicas: 3
+      depends_on:
+        - primary
   redis:
     image: redis:4.0.1-alpine
     command: redis-server
